# super-auto-rubric

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: agentgym_webshop.yaml  dr_tulu_rubric.yaml  external_repos.yaml  static_webshop_rubrics.yaml  train_webshop_rubric_evolution.yaml  training_free_icl.yaml
docs/plans/: shared-webshop.md  train-settings-replication.md  train-webshop-rubric-evolution.md  training-free-webshop-trajecdebug.md  webshop-todo-list.md
docs/setup/: mac-webshop-ssd.md
experiments/webshop_tulu_critic_v1/: MANIFEST.sha256  README.md  apply_to_dr_tulu.sh
experiments/webshop_tulu_critic_v1/data/: webshop_tulu_eval_128.jsonl  webshop_tulu_eval_512.jsonl
experiments/webshop_tulu_critic_v1/logs/: REWARD_EVIDENCE.md  baseline_summary.json  critic_error_pool_8192.step64.jsonl  critic_v1_active_rubrics_by_step.jsonl  critic_v1_step_metrics.jsonl  critic_v1_step_scores.smoke_step64.jsonl  critic_v1_summary.json
requirements/: agentgym-webshop-mac-runtime.txt  agentgym-webshop.txt
scripts/: analyze_webshop_training_free_runs.py  bootstrap_train_branch.sh  build_agentdebug_webshop_assets.py  build_webshop_index_ssd.sh  build_webshop_meta_feedback.py  create_webshop_conda_env.sh  create_webshop_ssd_venv.sh  mine_webshop_weaknesses.py  run_agentgym_webshop_server.sh  run_webshop_baseline_batch.py  run_webshop_smoke.py  run_webshop_training_free_icl.py  update_webshop_rubric_pool.py
src/super_auto_rubric/: __init__.py
tests/: test_seed_plan.py  test_training_free_icl.py  test_trajectory_schema.py  test_webshop_local_loop.py
(+17 files in other folders)
