[project]
name = "super-auto-rubric"
version = "0.1.0"
description = "WebShop trajectory-derived weakness and rubric tooling."
requires-python = ">=3.10"
dependencies = [
  "requests>=2.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
